# Assistant

./: .gitignore  .install.sh.swp  LICENSE.md  README.md  install.sh  install_release.sh  make_release.sh
api_wrapper/: .install.sh.swp  CMakeLists.txt  assistantRC  build.sh  install.sh  install_packages.sh  pull.sh  run.sh
api_wrapper/src/: main.cpp
command_handler/: CMakeLists.txt  build.sh  install_bash.sh  menu_prompt.cpp
